--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,48 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* background-color: rgb(17, 16, 16); */
+  background-color: #ffffec;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.card-style {
+  background-color: #ffe7c1;
+  box-shadow: 2px 2px 10px;
+}
+
+.card-btn {
+  background-color: #36ba98;
+}
+
+.navb {
+  background-color: #597e52;
+}
+
+.price {
+  font-size: 1.6rem;
+}
+
+.logout-btn {
+  color: rgb(189, 14, 14);
+}
+
+.logout-btn:hover {
+  color: aliceblue;
+}
+
+.nav-txt {
+  color: rgba(0, 0, 0, 0.541);
+}
+
+.nav-txt:hover {
+  color: black;
 }
