--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,8 @@ code {
 
 .card-style {
   background-color: #ffe7c1;
-  box-shadow: 2px 2px 10px;
+  border: 1px solid hsl(0, 0%, 80%);
+  box-shadow: 5px 5px 5px hsla(0,0%, 0%,0.1);
 }
 
 .card-btn {
