feat:Some UI changes

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* background-color: rgb(17, 16, 16); */
+  /* background-image: url("../public/pexels-shameel-mukkath-3421394-5175546.jpg"); */
   background-color: #ffffec;
 }
 
